fix: New French translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -113,6 +113,8 @@
   "You have left the shared document": "Vous avez quitté le document partagé",
   "Could not leave document": "Impossible de quitter le document",
   "Apply template": "Appliquer le modèle",
+  "New emoji": "New emoji",
+  "Upload emoji": "Upload emoji",
   "Disconnect": "Se déconnecter",
   "Disconnect analytics": "Déconnecter les statistiques",
   "Home": "Accueil",
@@ -172,6 +174,7 @@
   "Navigation": "Navigation",
   "Notification": "Notification",
   "Groups": "Groupes",
+  "Emoji": "Émoticône",
   "People": "Personnes",
   "Share": "Partager",
   "Workspace": "Espace de travail",
@@ -253,6 +256,20 @@
   "Currently editing": "En cours de modification",
   "Currently viewing": "En train de consulter",
   "Viewed {{ timeAgo }}": "Vu il y a {{ timeAgo }}",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
+  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
+  "Please enter a name for the emoji": "Please enter a name for the emoji",
+  "Please select an image file": "Please select an image file",
+  "Emoji created successfully": "Emoji created successfully",
+  "Uploading": "Transfert en cours",
+  "Add emoji": "Add emoji",
+  "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.": "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "Click or drag to replace": "Click or drag to replace",
+  "Drop the image here": "Drop the image here",
+  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "Le module n'a pas pu être chargé",
   "Loading Failed": "Échec du chargement",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Désolé, le chargement d'une partie de l'application a échoué. C'est probablement dû au fait qu'elle a été mise à jour depuis que vous avez ouvert l'onglet, ou en raison d'une requête réseau échouée. Essayez d'actualiser la page.",
@@ -299,6 +316,8 @@
   "Icon Picker": "Sélecteur d'icône",
   "Icons": "Icônes",
   "Emojis": "Emojis",
+  "Custom Emojis": "Custom Emojis",
+  "Custom": "Personnalisé",
   "Remove": "Supprimer",
   "All": "Tout",
   "Frequently Used": "Fréquemment utilisé",
@@ -597,6 +616,9 @@
   "Comment options": "Options des commentaires",
   "Enable viewer insights": "Activer le visualisateur d'analyses",
   "Enable embeds": "Activer les intégrations",
+  "Delete Emoji": "Delete Emoji",
+  "Emoji deleted": "Emoji deleted",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "Fichier",
   "Group members": "Membres du groupe",
   "Edit group": "Modifier le groupe",
@@ -647,7 +669,6 @@
   "30 days": "30 jours",
   "60 days": "60 jours",
   "90 days": "90 jours",
-  "Custom": "Personnalisé",
   "No expiration": "Pas d'expiration",
   "The document archive is empty at the moment.": "Les archives sont vides pour le moment.",
   "Drop documents to import": "Déposer les documents à importer",
@@ -848,7 +869,6 @@
   "Inline LaTeX": "LaTeX en ligne",
   "Triggers": "Alertes",
   "Mention users and more": "Mentionner les utilisateurs et plus",
-  "Emoji": "Émoticône",
   "Insert block": "Insérer un bloc",
   "Sign In": "Se connecter",
   "Continue with Email": "Continuer avec un e-mail",
@@ -989,8 +1009,9 @@
   "Your import is being processed, you can safely leave this page": "Votre importation est en cours, vous pouvez quitter cette page en toute sécurité",
   "File not supported – please upload a valid ZIP file": "Fichier non pris en charge - veuillez téléverser un fichier ZIP valide",
   "Set the default permission level for collections created from the import": "Définir le niveau de permission par défaut pour les collections créées à partir de l'importation",
-  "Uploading": "Transfert en cours",
   "Start import": "Démarrer l'importation",
+  "Added by": "Added by",
+  "Date added": "Date added",
   "Processing": "Traitement en cours",
   "Expired": "Expiré",
   "Completed": "Terminé",
@@ -1060,6 +1081,8 @@
   "Editors": "Éditeurs",
   "All status": "Tous les statuts",
   "Active": "Actif",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Gauche",
   "Right": "Droite",
   "Settings saved": "Paramètres enregistrés",
