fix: New Spanish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/es_ES/translation.json
+++ b/shared/i18n/locales/es_ES/translation.json
@@ -113,6 +113,8 @@
   "You have left the shared document": "Has abandonado el documento compartido",
   "Could not leave document": "No se pudo abandonar el documento",
   "Apply template": "Aplicar plantilla",
+  "New emoji": "New emoji",
+  "Upload emoji": "Upload emoji",
   "Disconnect": "Desconectar",
   "Disconnect analytics": "Desconectar analítica",
   "Home": "Inicio",
@@ -172,6 +174,7 @@
   "Navigation": "Navegación",
   "Notification": "Notificación",
   "Groups": "Grupos",
+  "Emoji": "Emoticono",
   "People": "Personas",
   "Share": "Compartir",
   "Workspace": "Espacio de trabajo",
@@ -253,6 +256,20 @@
   "Currently editing": "Editando actualmente",
   "Currently viewing": "Visualizando actualmente",
   "Viewed {{ timeAgo }}": "Visto {{ timeAgo }}",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
+  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
+  "Please enter a name for the emoji": "Please enter a name for the emoji",
+  "Please select an image file": "Please select an image file",
+  "Emoji created successfully": "Emoji created successfully",
+  "Uploading": "Subiendo",
+  "Add emoji": "Add emoji",
+  "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.": "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "Click or drag to replace": "Click or drag to replace",
+  "Drop the image here": "Drop the image here",
+  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "El módulo no ha podido ser cargado",
   "Loading Failed": "Carga fallida",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Lo sentimos, parte de la aplicación no pudo ser cargada. Esto puede deberse a que se actualizó desde que abriste la pestaña o debido a una solicitud de red fallida. Por favor intenta recargar la página.",
@@ -299,6 +316,8 @@
   "Icon Picker": "Selector de ícono",
   "Icons": "Íconos",
   "Emojis": "Emojis",
+  "Custom Emojis": "Custom Emojis",
+  "Custom": "Personalizado",
   "Remove": "Eliminar",
   "All": "Todos",
   "Frequently Used": "Usado Frecuentemente",
@@ -597,6 +616,9 @@
   "Comment options": "Opciones de los comentarios",
   "Enable viewer insights": "Habilitar estadísticas",
   "Enable embeds": "Habilitar embeds",
+  "Delete Emoji": "Delete Emoji",
+  "Emoji deleted": "Emoji deleted",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "Archivo",
   "Group members": "Miembros del grupo",
   "Edit group": "Editar grupo",
@@ -647,7 +669,6 @@
   "30 days": "30 días",
   "60 days": "60 días",
   "90 days": "90 días",
-  "Custom": "Personalizado",
   "No expiration": "Sin expiración",
   "The document archive is empty at the moment.": "El archivo está vacío en este momento.",
   "Drop documents to import": "Arrastra los documentos para importar",
@@ -848,7 +869,6 @@
   "Inline LaTeX": "Línea de LaTeX",
   "Triggers": "Activadores",
   "Mention users and more": "Menciona usuarios y más",
-  "Emoji": "Emoticono",
   "Insert block": "Insertar bloque",
   "Sign In": "Iniciar sesión",
   "Continue with Email": "Continuar con el correo electrónico",
@@ -989,8 +1009,9 @@
   "Your import is being processed, you can safely leave this page": "Su importación está siendo procesada, puede salir de esta página de manera segura",
   "File not supported – please upload a valid ZIP file": "Archivo no soportado - por favor sube un archivo ZIP válido",
   "Set the default permission level for collections created from the import": "Establecer el nivel de permisos por defecto para las colecciones creadas a partir de la importación",
-  "Uploading": "Subiendo",
   "Start import": "Iniciar importación",
+  "Added by": "Added by",
+  "Date added": "Date added",
   "Processing": "Procesando",
   "Expired": "Expirado",
   "Completed": "Completado",
@@ -1060,6 +1081,8 @@
   "Editors": "Editores",
   "All status": "Todos los estados",
   "Active": "Activo",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Izquierda",
   "Right": "Derecha",
   "Settings saved": "Configuración guardada",
