--- a/shared/i18n/locales/cs_CZ/translation.json
+++ b/shared/i18n/locales/cs_CZ/translation.json
@@ -113,6 +113,8 @@
   "You have left the shared document": "Opustil jste sdílený dokument",
   "Could not leave document": "Nepodařilo se opustit dokument",
   "Apply template": "Apply template",
+  "New emoji": "New emoji",
+  "Upload emoji": "Upload emoji",
   "Disconnect": "Odpojit",
   "Disconnect analytics": "Disconnect analytics",
   "Home": "Domovská stránka",
@@ -172,6 +174,7 @@
   "Navigation": "Menu",
   "Notification": "Upozornění ",
   "Groups": "Skupiny",
+  "Emoji": "Emoji",
   "People": "Lidé",
   "Share": "Sdílet",
   "Workspace": "Pracovní prostor",
@@ -253,6 +256,20 @@
   "Currently editing": "Právě upravuje",
   "Currently viewing": "Právě prohlíží",
   "Viewed {{ timeAgo }}": "Zobrazeno před {{ timeAgo }}",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
+  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
+  "Please enter a name for the emoji": "Please enter a name for the emoji",
+  "Please select an image file": "Please select an image file",
+  "Emoji created successfully": "Emoji created successfully",
+  "Uploading": "Nahrávání",
+  "Add emoji": "Add emoji",
+  "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.": "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "Click or drag to replace": "Click or drag to replace",
+  "Drop the image here": "Drop the image here",
+  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "Modul se nepodařilo načíst",
   "Loading Failed": "Načítání selhalo",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Litujeme, část aplikace se nepodařilo načíst. Může to být způsobeno tím, že byla aktualizována od chvíle, kdy jste kartu otevřeli, nebo kvůli neúspěšnému síťovému požadavku. Zkuste znovu načíst.",
@@ -299,6 +316,8 @@
   "Icon Picker": "Výběr ikony",
   "Icons": "Ikony",
   "Emojis": "Emoji",
+  "Custom Emojis": "Custom Emojis",
+  "Custom": "Vlastní",
   "Remove": "Odstranit",
   "All": "Vše",
   "Frequently Used": "Často používané",
@@ -597,6 +616,9 @@
   "Comment options": "Nastavení komentářů",
   "Enable viewer insights": "Zapnout analytika nahlížení",
   "Enable embeds": "Povolit embed vkládání",
+  "Delete Emoji": "Delete Emoji",
+  "Emoji deleted": "Emoji deleted",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "File",
   "Group members": "Členové skupiny",
   "Edit group": "Upravit skupinu",
@@ -647,7 +669,6 @@
   "30 days": "30 dní",
   "60 days": "60 dní",
   "90 days": "90 dní",
-  "Custom": "Vlastní",
   "No expiration": "Bez data vypršení platnosti",
   "The document archive is empty at the moment.": "Archiv dokumentů je v tuto chvíli prázdný.",
   "Drop documents to import": "Přetáhněte dokumenty k importu",
@@ -848,7 +869,6 @@
   "Inline LaTeX": "Vložený LaTeX",
   "Triggers": "Akce",
   "Mention users and more": "Zmínit uživatele a další",
-  "Emoji": "Emoji",
   "Insert block": "Přidat blok",
   "Sign In": "Přihlásit se",
   "Continue with Email": "Pokračovat pomocí e-mailu",
@@ -989,8 +1009,9 @@
   "Your import is being processed, you can safely leave this page": "Váš import se zpracovává, můžete tuto stránku bezpečně opustit",
   "File not supported – please upload a valid ZIP file": "Soubor není podporován – nahrajte prosím platný soubor ZIP",
   "Set the default permission level for collections created from the import": "Set the default permission level for collections created from the import",
-  "Uploading": "Nahrávání",
   "Start import": "Spustit import",
+  "Added by": "Added by",
+  "Date added": "Date added",
   "Processing": "Zpracovává se",
   "Expired": "Vypršel",
   "Completed": "Dokončeno",
@@ -1060,6 +1081,8 @@
   "Editors": "Editoři",
   "All status": "All status",
   "Active": "Aktivní",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Vlevo",
   "Right": "Vpravo",
   "Settings saved": "Nastavení uloženo",
