fix: New Danish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/da_DK/translation.json
+++ b/shared/i18n/locales/da_DK/translation.json
@@ -113,6 +113,8 @@
   "You have left the shared document": "You have left the shared document",
   "Could not leave document": "Could not leave document",
   "Apply template": "Apply template",
+  "New emoji": "New emoji",
+  "Upload emoji": "Upload emoji",
   "Disconnect": "Disconnect",
   "Disconnect analytics": "Disconnect analytics",
   "Home": "Hjem",
@@ -172,6 +174,7 @@
   "Navigation": "Navigation",
   "Notification": "Notifikation",
   "Groups": "Groups",
+  "Emoji": "Emoji",
   "People": "Personer",
   "Share": "Del",
   "Workspace": "Arbejdsområde",
@@ -253,6 +256,20 @@
   "Currently editing": "Redigerer nu",
   "Currently viewing": "Ser nu",
   "Viewed {{ timeAgo }}": "Viewed {{ timeAgo }}",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
+  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
+  "Please enter a name for the emoji": "Please enter a name for the emoji",
+  "Please select an image file": "Please select an image file",
+  "Emoji created successfully": "Emoji created successfully",
+  "Uploading": "Uploading",
+  "Add emoji": "Add emoji",
+  "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.": "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "Click or drag to replace": "Click or drag to replace",
+  "Drop the image here": "Drop the image here",
+  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "Modulet kunne ikke indlæses",
   "Loading Failed": "Loading Failed",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.",
@@ -299,6 +316,8 @@
   "Icon Picker": "Icon Picker",
   "Icons": "Icons",
   "Emojis": "Emojis",
+  "Custom Emojis": "Custom Emojis",
+  "Custom": "Custom",
   "Remove": "Remove",
   "All": "All",
   "Frequently Used": "Frequently Used",
@@ -597,6 +616,9 @@
   "Comment options": "Comment options",
   "Enable viewer insights": "Aktiver seerindsigter",
   "Enable embeds": "Enable embeds",
+  "Delete Emoji": "Delete Emoji",
+  "Emoji deleted": "Emoji deleted",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "File",
   "Group members": "Gruppemedlemmer",
   "Edit group": "Edit group",
@@ -647,7 +669,6 @@
   "30 days": "30 days",
   "60 days": "60 days",
   "90 days": "90 days",
-  "Custom": "Custom",
   "No expiration": "No expiration",
   "The document archive is empty at the moment.": "The document archive is empty at the moment.",
   "Drop documents to import": "Drop documents to import",
@@ -848,7 +869,6 @@
   "Inline LaTeX": "Inline LaTeX",
   "Triggers": "Triggers",
   "Mention users and more": "Mention users and more",
-  "Emoji": "Emoji",
   "Insert block": "Insert block",
   "Sign In": "Sign In",
   "Continue with Email": "Continue with Email",
@@ -989,8 +1009,9 @@
   "Your import is being processed, you can safely leave this page": "Your import is being processed, you can safely leave this page",
   "File not supported – please upload a valid ZIP file": "File not supported – please upload a valid ZIP file",
   "Set the default permission level for collections created from the import": "Set the default permission level for collections created from the import",
-  "Uploading": "Uploading",
   "Start import": "Start import",
+  "Added by": "Added by",
+  "Date added": "Date added",
   "Processing": "Processing",
   "Expired": "Expired",
   "Completed": "Completed",
@@ -1060,6 +1081,8 @@
   "Editors": "Editors",
   "All status": "All status",
   "Active": "Active",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Left",
   "Right": "Right",
   "Settings saved": "Settings saved",
