fix: New German translations from Crowdin [ci skip]

--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -113,6 +113,8 @@
   "You have left the shared document": "Sie haben das geteilte Dokument verlassen",
   "Could not leave document": "Dokument konnte nicht verlassen werden",
   "Apply template": "Vorlage übernehmen",
+  "New emoji": "New emoji",
+  "Upload emoji": "Upload emoji",
   "Disconnect": "Trennen",
   "Disconnect analytics": "Analytics trennen",
   "Home": "Startseite",
@@ -172,6 +174,7 @@
   "Navigation": "Navigation",
   "Notification": "Benachrichtigung",
   "Groups": "Gruppen",
+  "Emoji": "Emoji",
   "People": "Personen",
   "Share": "Teilen",
   "Workspace": "Arbeitsbereich",
@@ -253,6 +256,20 @@
   "Currently editing": "Derzeit in Bearbeitung",
   "Currently viewing": "Gerade angezeigt",
   "Viewed {{ timeAgo }}": "Angesehen {{ timeAgo }}",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
+  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
+  "Please enter a name for the emoji": "Please enter a name for the emoji",
+  "Please select an image file": "Please select an image file",
+  "Emoji created successfully": "Emoji created successfully",
+  "Uploading": "Wird hochgeladen",
+  "Add emoji": "Add emoji",
+  "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.": "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "Click or drag to replace": "Click or drag to replace",
+  "Drop the image here": "Drop the image here",
+  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "Modul konnte nicht geladen werden",
   "Loading Failed": "Laden fehlgeschlagen",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Leider konnte ein Teil der Software nicht geladen werden weil der Inhalt sich inzwischen geändert hat oder eine Abfrage nicht erfolgreich abgeschlossen werden konnte. Bitte neu laden.",
@@ -299,6 +316,8 @@
   "Icon Picker": "Icon-Picker",
   "Icons": "Icons",
   "Emojis": "Emojis",
+  "Custom Emojis": "Custom Emojis",
+  "Custom": "Benutzerdefiniert",
   "Remove": "Entfernen",
   "All": "Alle",
   "Frequently Used": "Häufig verwendet",
@@ -597,6 +616,9 @@
   "Comment options": "Kommentar Optionen",
   "Enable viewer insights": "Leserstatistiken aktivieren",
   "Enable embeds": "Einbettungen aktivieren",
+  "Delete Emoji": "Delete Emoji",
+  "Emoji deleted": "Emoji deleted",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "Datei",
   "Group members": "Gruppenmitglieder",
   "Edit group": "Gruppe bearbeiten",
@@ -647,7 +669,6 @@
   "30 days": "30 Tage",
   "60 days": "60 Tage",
   "90 days": "90 Tage",
-  "Custom": "Benutzerdefiniert",
   "No expiration": "Ohne Ablaufdatum",
   "The document archive is empty at the moment.": "Das Dokumentenarchiv ist momentan leer.",
   "Drop documents to import": "Dokumente zum Importieren hier ablegen",
@@ -848,7 +869,6 @@
   "Inline LaTeX": "Inline-LaTeX",
   "Triggers": "Auslöser",
   "Mention users and more": "Erwähne Benutzer und mehr",
-  "Emoji": "Emoji",
   "Insert block": "Block einfügen",
   "Sign In": "Anmelden",
   "Continue with Email": "Weiter mit E-Mail",
@@ -989,8 +1009,9 @@
   "Your import is being processed, you can safely leave this page": "Dein Import wird bearbeitet, du kannst diese Seite sicher verlassen",
   "File not supported – please upload a valid ZIP file": "Datei wird nicht unterstützt – bitte lade eine gültige ZIP-Datei hoch",
   "Set the default permission level for collections created from the import": "Legen Sie die Standardberechtigung für Sammlungen fest, die vom Import erstellt wurden",
-  "Uploading": "Wird hochgeladen",
   "Start import": "Import starten",
+  "Added by": "Added by",
+  "Date added": "Date added",
   "Processing": "Wird ausgeführt",
   "Expired": "Abgelaufen",
   "Completed": "Erledigt",
@@ -1060,6 +1081,8 @@
   "Editors": "Redakteure",
   "All status": "Jeder Status",
   "Active": "Aktiv",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Links",
   "Right": "Rechts",
   "Settings saved": "Einstellungen gespeichert",
