--- a/shared/i18n/locales/hu_HU/translation.json
+++ b/shared/i18n/locales/hu_HU/translation.json
@@ -113,6 +113,8 @@
   "You have left the shared document": "Elhagytad a megosztott dokumentumot",
   "Could not leave document": "Nem lehet menteni a dokumentumot",
   "Apply template": "Sablon használata",
+  "New emoji": "New emoji",
+  "Upload emoji": "Upload emoji",
   "Disconnect": "Megszakít",
   "Disconnect analytics": "Analitika leválasztása",
   "Home": "Kezdőlap",
@@ -172,6 +174,7 @@
   "Navigation": "Navigáció",
   "Notification": "Értesítés",
   "Groups": "Csoportok",
+  "Emoji": "Emoji",
   "People": "Emberek",
   "Share": "Megosztás",
   "Workspace": "Munkaterület",
@@ -253,6 +256,20 @@
   "Currently editing": "Jelenleg szerkeszti",
   "Currently viewing": "Jelenleg megtekinti",
   "Viewed {{ timeAgo }}": "Megtekintve: {{ timeAgo }}",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
+  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
+  "Please enter a name for the emoji": "Please enter a name for the emoji",
+  "Please select an image file": "Please select an image file",
+  "Emoji created successfully": "Emoji created successfully",
+  "Uploading": "Uploading",
+  "Add emoji": "Add emoji",
+  "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.": "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "Click or drag to replace": "Click or drag to replace",
+  "Drop the image here": "Drop the image here",
+  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "A modult nem sikerült betölteni",
   "Loading Failed": "Betöltés sikertelen",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Elnézést, az alkalmazás egy részének betöltése sikertelen. Lehet, hogy frissült, mióta megnyitotta a fület, vagy hálózati kapcsolati hiba történt. Kérem próbálja újratölteni.",
@@ -299,6 +316,8 @@
   "Icon Picker": "Ikonválasztó",
   "Icons": "Ikonok",
   "Emojis": "Emojik",
+  "Custom Emojis": "Custom Emojis",
+  "Custom": "Egyedi",
   "Remove": "Eltávolítás",
   "All": "Összes",
   "Frequently Used": "Gyakran használt",
@@ -597,6 +616,9 @@
   "Comment options": "Hozzászólás beállítások",
   "Enable viewer insights": "Enable viewer insights",
   "Enable embeds": "Beágyazások engedélyezése",
+  "Delete Emoji": "Delete Emoji",
+  "Emoji deleted": "Emoji deleted",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "File",
   "Group members": "Csoport tagjai",
   "Edit group": "Csoport szerkesztése",
@@ -647,7 +669,6 @@
   "30 days": "30 nap",
   "60 days": "60 nap",
   "90 days": "90 nap",
-  "Custom": "Egyedi",
   "No expiration": "Nincs lejárat",
   "The document archive is empty at the moment.": "A dokumentum archívum jelenleg üres.",
   "Drop documents to import": "Engedje el itt a dokumentumot az importáláshoz",
@@ -848,7 +869,6 @@
   "Inline LaTeX": "Beágyazott LaTeX",
   "Triggers": "Triggers",
   "Mention users and more": "Mention users and more",
-  "Emoji": "Emoji",
   "Insert block": "Blokk beszúrása",
   "Sign In": "Bejelentkezés",
   "Continue with Email": "Continue with Email",
@@ -989,8 +1009,9 @@
   "Your import is being processed, you can safely leave this page": "Your import is being processed, you can safely leave this page",
   "File not supported – please upload a valid ZIP file": "File not supported – please upload a valid ZIP file",
   "Set the default permission level for collections created from the import": "Set the default permission level for collections created from the import",
-  "Uploading": "Uploading",
   "Start import": "Start import",
+  "Added by": "Added by",
+  "Date added": "Date added",
   "Processing": "Processing",
   "Expired": "Lejárt",
   "Completed": "Completed",
@@ -1060,6 +1081,8 @@
   "Editors": "Szerkesztők",
   "All status": "Összes állapot",
   "Active": "Aktív",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Left",
   "Right": "Right",
   "Settings saved": "Beállítások elmentve",
