--- a/shared/i18n/locales/it_IT/translation.json
+++ b/shared/i18n/locales/it_IT/translation.json
@@ -113,6 +113,8 @@
   "You have left the shared document": "Hai lasciato il documento condiviso",
   "Could not leave document": "Impossibile lasciare il documento",
   "Apply template": "Applica modello",
+  "New emoji": "New emoji",
+  "Upload emoji": "Upload emoji",
   "Disconnect": "Disconnetti",
   "Disconnect analytics": "Disconnect analytics",
   "Home": "Home",
@@ -172,6 +174,7 @@
   "Navigation": "Navigazione",
   "Notification": "Notifica",
   "Groups": "Gruppi",
+  "Emoji": "Emoji",
   "People": "Persone",
   "Share": "Condividi",
   "Workspace": "Area di lavoro",
@@ -253,6 +256,20 @@
   "Currently editing": "Attualemente in modifica",
   "Currently viewing": "Attualmente visualizzato",
   "Viewed {{ timeAgo }}": "Visualizzato",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
+  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
+  "Please enter a name for the emoji": "Please enter a name for the emoji",
+  "Please select an image file": "Please select an image file",
+  "Emoji created successfully": "Emoji created successfully",
+  "Uploading": "Caricamento",
+  "Add emoji": "Add emoji",
+  "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.": "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "Click or drag to replace": "Click or drag to replace",
+  "Drop the image here": "Drop the image here",
+  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "Caricamento del modulo fallito",
   "Loading Failed": "Caricamento fallito",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Spiacenti, parte dell'applicazione non si è caricata correttamente. È possibile che sia stata aggiornata da quando hai aperto la scheda oppure è fallita una richiesta di rete. Si prega di ricaricare la pagina.",
@@ -299,6 +316,8 @@
   "Icon Picker": "Selettore di icone",
   "Icons": "Icone",
   "Emojis": "Emoji",
+  "Custom Emojis": "Custom Emojis",
+  "Custom": "Personalizzato",
   "Remove": "Elimina",
   "All": "Tutto",
   "Frequently Used": "Usato frequentemente",
@@ -597,6 +616,9 @@
   "Comment options": "Opzioni Commento",
   "Enable viewer insights": "Abilita gli approfondimenti sugli spettatori",
   "Enable embeds": "Abilita l'embedding",
+  "Delete Emoji": "Delete Emoji",
+  "Emoji deleted": "Emoji deleted",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "File",
   "Group members": "Membri del gruppo",
   "Edit group": "Modifica gruppo",
@@ -647,7 +669,6 @@
   "30 days": "30 giorni",
   "60 days": "60 giorni",
   "90 days": "90 giorni",
-  "Custom": "Personalizzato",
   "No expiration": "Nessuna scadenza",
   "The document archive is empty at the moment.": "L'archivio documenti è vuoto al momento.",
   "Drop documents to import": "Trascina qui i documenti oppure",
@@ -848,7 +869,6 @@
   "Inline LaTeX": "LaTeX in linea",
   "Triggers": "Triggers",
   "Mention users and more": "Menziona utenti e altro ancora",
-  "Emoji": "Emoji",
   "Insert block": "Inserisci blocco",
   "Sign In": "Accedi",
   "Continue with Email": "Continua con email",
@@ -989,8 +1009,9 @@
   "Your import is being processed, you can safely leave this page": "La tua importazione è in fase di elaborazione, puoi tranquillamente lasciare questa pagina",
   "File not supported – please upload a valid ZIP file": "File non supportato: carica un file ZIP valido",
   "Set the default permission level for collections created from the import": "Set the default permission level for collections created from the import",
-  "Uploading": "Caricamento",
   "Start import": "Start import",
+  "Added by": "Added by",
+  "Date added": "Date added",
   "Processing": "In corso",
   "Expired": "Scaduto",
   "Completed": "Completato",
@@ -1060,6 +1081,8 @@
   "Editors": "Editors",
   "All status": "All status",
   "Active": "Attivo",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Left",
   "Right": "Right",
   "Settings saved": "Impostazioni salvate",
