--- a/shared/i18n/locales/ja_JP/translation.json
+++ b/shared/i18n/locales/ja_JP/translation.json
@@ -113,6 +113,8 @@
   "You have left the shared document": "共有ドキュメントから退出しました",
   "Could not leave document": "ドキュメントから退出することができませんでした",
   "Apply template": "Apply template",
+  "New emoji": "New emoji",
+  "Upload emoji": "Upload emoji",
   "Disconnect": "接続を解除",
   "Disconnect analytics": "Disconnect analytics",
   "Home": "ホーム",
@@ -172,6 +174,7 @@
   "Navigation": "ナビゲーション",
   "Notification": "通知",
   "Groups": "グループ",
+  "Emoji": "絵文字",
   "People": "メンバー",
   "Share": "共有",
   "Workspace": "ワークスペース",
@@ -253,6 +256,20 @@
   "Currently editing": "編集中",
   "Currently viewing": "閲覧中",
   "Viewed {{ timeAgo }}": "{{ timeAgo }} 前に閲覧済み",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
+  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
+  "Please enter a name for the emoji": "Please enter a name for the emoji",
+  "Please select an image file": "Please select an image file",
+  "Emoji created successfully": "Emoji created successfully",
+  "Uploading": "アップロード中",
+  "Add emoji": "Add emoji",
+  "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.": "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "Click or drag to replace": "Click or drag to replace",
+  "Drop the image here": "Drop the image here",
+  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "モジュールの読み込みに失敗しました",
   "Loading Failed": "読み込みに失敗しました",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "一部のアプリケーションを読み込めませんでした。 再読み込みしてください。",
@@ -299,6 +316,8 @@
   "Icon Picker": "アイコンを選択",
   "Icons": "アイコン",
   "Emojis": "絵文字",
+  "Custom Emojis": "Custom Emojis",
+  "Custom": "カスタム",
   "Remove": "削除",
   "All": "全て",
   "Frequently Used": "使用頻度の高い項目",
@@ -597,6 +616,9 @@
   "Comment options": "コメントオプション",
   "Enable viewer insights": "ビューアインサイトを有効にする",
   "Enable embeds": "埋め込みを有効にする",
+  "Delete Emoji": "Delete Emoji",
+  "Emoji deleted": "Emoji deleted",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "File",
   "Group members": "グループのメンバー",
   "Edit group": "グループを編集",
@@ -647,7 +669,6 @@
   "30 days": "30日",
   "60 days": "60日",
   "90 days": "90日",
-  "Custom": "カスタム",
   "No expiration": "無期限",
   "The document archive is empty at the moment.": "アーカイブにはなにもありません。",
   "Drop documents to import": "インポートするドキュメントをドロップ",
@@ -848,7 +869,6 @@
   "Inline LaTeX": "インライン LaTeX",
   "Triggers": "トリガー",
   "Mention users and more": "ユーザーなどをメンションする",
-  "Emoji": "絵文字",
   "Insert block": "ブロックの挿入",
   "Sign In": "ログイン",
   "Continue with Email": "Eメール でログイン",
@@ -989,8 +1009,9 @@
   "Your import is being processed, you can safely leave this page": "インポートしています\nこのページを閉じても問題ありません",
   "File not supported – please upload a valid ZIP file": "非対応ファイル - 有効な ZIP ファイルをアップロードしてください",
   "Set the default permission level for collections created from the import": "インポートから作成されたコレクションについて、デフォルトの権限レベルを設定する",
-  "Uploading": "アップロード中",
   "Start import": "インポートを開始",
+  "Added by": "Added by",
+  "Date added": "Date added",
   "Processing": "処理中",
   "Expired": "期限切れ",
   "Completed": "完了",
@@ -1060,6 +1081,8 @@
   "Editors": "編集者",
   "All status": "全てのステータス",
   "Active": "アクティブ",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "左",
   "Right": "右",
   "Settings saved": "設定が保存されました",
