--- a/shared/i18n/locales/ko_KR/translation.json
+++ b/shared/i18n/locales/ko_KR/translation.json
@@ -113,6 +113,8 @@
   "You have left the shared document": "공유 문서 나갔습니다",
   "Could not leave document": "문서를 나갈 수 없습니다",
   "Apply template": "템플릿 적용",
+  "New emoji": "New emoji",
+  "Upload emoji": "Upload emoji",
   "Disconnect": "연결 해제",
   "Disconnect analytics": "분석 연결 해제",
   "Home": "홈",
@@ -172,6 +174,7 @@
   "Navigation": "네비게이션",
   "Notification": "알림",
   "Groups": "그룹",
+  "Emoji": "이모지",
   "People": "사용자",
   "Share": "공유하기",
   "Workspace": "워크스페이스",
@@ -253,6 +256,20 @@
   "Currently editing": "현재 수정 중",
   "Currently viewing": "현재 보는 중",
   "Viewed {{ timeAgo }}": "{{ timeAgo }} 전에 봄",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
+  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
+  "Please enter a name for the emoji": "Please enter a name for the emoji",
+  "Please select an image file": "Please select an image file",
+  "Emoji created successfully": "Emoji created successfully",
+  "Uploading": "업로드 중",
+  "Add emoji": "Add emoji",
+  "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.": "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "Click or drag to replace": "Click or drag to replace",
+  "Drop the image here": "Drop the image here",
+  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "모듈 불러오기 실패",
   "Loading Failed": "불러오기 실패",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "죄송합니다, 일부 애플리케이션을 불러올 수 없습니다. 탭을 연 이후 업데이트 되었거나 네트워크 요청이 실패했기 때문일 수 있습니다. 새로고침을 시도해보세요",
@@ -299,6 +316,8 @@
   "Icon Picker": "아이콘 선택기",
   "Icons": "아이콘",
   "Emojis": "이모지",
+  "Custom Emojis": "Custom Emojis",
+  "Custom": "사용자 지정",
   "Remove": "제거",
   "All": "전체",
   "Frequently Used": "자주 사용됨",
@@ -597,6 +616,9 @@
   "Comment options": "댓글 옵션",
   "Enable viewer insights": "뷰어 정보 활성화",
   "Enable embeds": "임베드 활성화",
+  "Delete Emoji": "Delete Emoji",
+  "Emoji deleted": "Emoji deleted",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "파일",
   "Group members": "그룹 구성원",
   "Edit group": "그룹 수정",
@@ -647,7 +669,6 @@
   "30 days": "30일",
   "60 days": "60일",
   "90 days": "90일",
-  "Custom": "사용자 지정",
   "No expiration": "만료 없음",
   "The document archive is empty at the moment.": "현재 보관 문서함이 비어 있습니다.",
   "Drop documents to import": "가져올 문서 내려놓기",
@@ -848,7 +869,6 @@
   "Inline LaTeX": "인라인 LaTeX",
   "Triggers": "트리거",
   "Mention users and more": "사용자 멘션 및 기타",
-  "Emoji": "이모지",
   "Insert block": "블록 삽입",
   "Sign In": "로그인",
   "Continue with Email": "이메일로 계속하기",
@@ -989,8 +1009,9 @@
   "Your import is being processed, you can safely leave this page": "가져오기를 처리 중입니다. 이 페이지를 종료해도 됩니다.",
   "File not supported – please upload a valid ZIP file": "지원되지 않는 파일 – 유효한 ZIP 파일을 업로드하십시오.",
   "Set the default permission level for collections created from the import": "가져오기로 생성된 컬렉션에 대한 기본 권한 수준 설정",
-  "Uploading": "업로드 중",
   "Start import": "가져오기 시작",
+  "Added by": "Added by",
+  "Date added": "Date added",
   "Processing": "처리중",
   "Expired": "만료",
   "Completed": "완료",
@@ -1060,6 +1081,8 @@
   "Editors": "에디터",
   "All status": "모든 상태",
   "Active": "활성",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "왼쪽",
   "Right": "오른쪽",
   "Settings saved": "설정이 저장되었습니다",
