fix: New Dutch translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -113,6 +113,8 @@
   "You have left the shared document": "Je hebt het gedeelde document verlaten",
   "Could not leave document": "Kon document niet verlaten",
   "Apply template": "Sjabloon toepassen",
+  "New emoji": "New emoji",
+  "Upload emoji": "Upload emoji",
   "Disconnect": "Ontkoppel",
   "Disconnect analytics": "Analytics ontkoppelen",
   "Home": "Startscherm",
@@ -172,6 +174,7 @@
   "Navigation": "Navigatie",
   "Notification": "Notificatie",
   "Groups": "Groepen",
+  "Emoji": "Emoji",
   "People": "Personen",
   "Share": "Delen",
   "Workspace": "Werkruimte",
@@ -253,6 +256,20 @@
   "Currently editing": "Momenteel aan het bewerken",
   "Currently viewing": "Momenteel aan het bekijken",
   "Viewed {{ timeAgo }}": "{{ timeAgo }} bekeken",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
+  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
+  "Please enter a name for the emoji": "Please enter a name for the emoji",
+  "Please select an image file": "Please select an image file",
+  "Emoji created successfully": "Emoji created successfully",
+  "Uploading": "Bezig met uploaden",
+  "Add emoji": "Add emoji",
+  "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.": "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "Click or drag to replace": "Click or drag to replace",
+  "Drop the image here": "Drop the image here",
+  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "Module kon niet geladen worden",
   "Loading Failed": "Laden mislukt",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Sorry, een deel van de toepassing kon niet geladen worden. Dit kan komen doordat het is bijgewerkt sinds het tabblad is geopend of door een mislukt netwerkverzoek. Probeer het opnieuw te laden.",
@@ -299,6 +316,8 @@
   "Icon Picker": "Pictogrammenkiezer",
   "Icons": "Pictogrammen",
   "Emojis": "Emoji's",
+  "Custom Emojis": "Custom Emojis",
+  "Custom": "Aangepast",
   "Remove": "Verwijder",
   "All": "Alle",
   "Frequently Used": "Vaak gebruikt",
@@ -597,6 +616,9 @@
   "Comment options": "Opties voor reageren",
   "Enable viewer insights": "Schakel viewer inzichten uit",
   "Enable embeds": "Embeds inschakelen",
+  "Delete Emoji": "Delete Emoji",
+  "Emoji deleted": "Emoji deleted",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "Bestand",
   "Group members": "Groepsleden",
   "Edit group": "Wijzig groep",
@@ -647,7 +669,6 @@
   "30 days": "30 dagen",
   "60 days": "60 dagen",
   "90 days": "90 dagen",
-  "Custom": "Aangepast",
   "No expiration": "Geen vervaldatum",
   "The document archive is empty at the moment.": "Het documentenarchief is momenteel leeg.",
   "Drop documents to import": "Sleep documenten hier naartoe om ze te importeren",
@@ -848,7 +869,6 @@
   "Inline LaTeX": "Inline LaTeX",
   "Triggers": "Triggers",
   "Mention users and more": "Gebruikers en meer vermelden",
-  "Emoji": "Emoji",
   "Insert block": "Voeg blok in",
   "Sign In": "Aanmelden",
   "Continue with Email": "Verdergaan met e-mailadres",
@@ -989,8 +1009,9 @@
   "Your import is being processed, you can safely leave this page": "Je import wordt verwerkt, je kan deze pagina veilig verlaten",
   "File not supported – please upload a valid ZIP file": "Bestand niet ondersteund – upload een geldig ZIP-bestand",
   "Set the default permission level for collections created from the import": "Stel het standaard machtingsniveau in voor collecties vanuit de import",
-  "Uploading": "Bezig met uploaden",
   "Start import": "Start importeren",
+  "Added by": "Added by",
+  "Date added": "Date added",
   "Processing": "Verwerken",
   "Expired": "Verlopen",
   "Completed": "Voltooid",
@@ -1060,6 +1081,8 @@
   "Editors": "Redacteurs",
   "All status": "Alle statussen",
   "Active": "Actief",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Links",
   "Right": "Rechts",
   "Settings saved": "Instellingen opgeslagen",
