--- a/shared/i18n/locales/pl_PL/translation.json
+++ b/shared/i18n/locales/pl_PL/translation.json
@@ -113,6 +113,8 @@
   "You have left the shared document": "Opuściłeś udostępniony dokument",
   "Could not leave document": "Nie udało się opuścić dokumentu",
   "Apply template": "Użyj szablonu",
+  "New emoji": "New emoji",
+  "Upload emoji": "Upload emoji",
   "Disconnect": "Rozłącz",
   "Disconnect analytics": "Odłącz analizę",
   "Home": "Strona Główna",
@@ -172,6 +174,7 @@
   "Navigation": "Nawigacja",
   "Notification": "Powiadomienie",
   "Groups": "Grupy",
+  "Emoji": "Emotikony",
   "People": "Osoby",
   "Share": "Udostępnij",
   "Workspace": "Obszar roboczy",
@@ -253,6 +256,20 @@
   "Currently editing": "Aktualnie edytujesz",
   "Currently viewing": "Aktualnie wyświetlasz",
   "Viewed {{ timeAgo }}": "Przeglądnięty {{ timeAgo }}",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
+  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
+  "Please enter a name for the emoji": "Please enter a name for the emoji",
+  "Please select an image file": "Please select an image file",
+  "Emoji created successfully": "Emoji created successfully",
+  "Uploading": "Wysyłanie",
+  "Add emoji": "Add emoji",
+  "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.": "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "Click or drag to replace": "Click or drag to replace",
+  "Drop the image here": "Drop the image here",
+  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "Nie udało się załadować modułu",
   "Loading Failed": "Ładowanie nie powiodło się",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Przepraszamy, nie udało się załadować części aplikacji. Może to być spowodowane tym, że został zaktualizowany od momentu otwarcia karty lub z powodu nieudanego żądania sieciowego. Spróbuj ponownie załadować.",
@@ -299,6 +316,8 @@
   "Icon Picker": "Selektor ikon",
   "Icons": "Ikony",
   "Emojis": "Emotikony",
+  "Custom Emojis": "Custom Emojis",
+  "Custom": "Niestandardowy",
   "Remove": "Usuń",
   "All": "Wszystko",
   "Frequently Used": "Często używane",
@@ -597,6 +616,9 @@
   "Comment options": "Opcje komentarza",
   "Enable viewer insights": "Włącz informacje o oglądających",
   "Enable embeds": "Włącz osadzanie",
+  "Delete Emoji": "Delete Emoji",
+  "Emoji deleted": "Emoji deleted",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "Plik",
   "Group members": "Członkowie grupy",
   "Edit group": "Edytuj grupę",
@@ -647,7 +669,6 @@
   "30 days": "30 dni",
   "60 days": "60 dni",
   "90 days": "90 dni",
-  "Custom": "Niestandardowy",
   "No expiration": "Bez daty wygaśnięcia",
   "The document archive is empty at the moment.": "Archiwum dokumentów jest obecnie puste.",
   "Drop documents to import": "Upuść dokumenty do zaimportowania",
@@ -848,7 +869,6 @@
   "Inline LaTeX": "LaTeX w linii",
   "Triggers": "Wyzwalacze",
   "Mention users and more": "Wzmianki o użytkownikach i nie tylko",
-  "Emoji": "Emotikony",
   "Insert block": "Wstaw blok",
   "Sign In": "Zaloguj się",
   "Continue with Email": "Kontynuuj przy użyciu e-maila",
@@ -989,8 +1009,9 @@
   "Your import is being processed, you can safely leave this page": "Twój import jest przetwarzany, możesz bezpiecznie opuścić tę stronę",
   "File not supported – please upload a valid ZIP file": "Plik nieobsługiwany – prześlij prawidłowy plik ZIP",
   "Set the default permission level for collections created from the import": "Ustaw domyślny poziom uprawnień dla kolekcji utworzonych z importu",
-  "Uploading": "Wysyłanie",
   "Start import": "Rozpocznij importowanie",
+  "Added by": "Added by",
+  "Date added": "Date added",
   "Processing": "Przetwarzanie",
   "Expired": "Ważność wygasła",
   "Completed": "Ukończone",
@@ -1060,6 +1081,8 @@
   "Editors": "Edytory",
   "All status": "Wszystkie statusy",
   "Active": "Aktywne",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Lewo",
   "Right": "Prawo",
   "Settings saved": "Ustawienia zapisane",
