fix: New Portuguese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_PT/translation.json
+++ b/shared/i18n/locales/pt_PT/translation.json
@@ -113,6 +113,8 @@
   "You have left the shared document": "You have left the shared document",
   "Could not leave document": "Could not leave document",
   "Apply template": "Apply template",
+  "New emoji": "New emoji",
+  "Upload emoji": "Upload emoji",
   "Disconnect": "Desligado",
   "Disconnect analytics": "Disconnect analytics",
   "Home": "Página inicial",
@@ -172,6 +174,7 @@
   "Navigation": "Navegação",
   "Notification": "Notificação",
   "Groups": "Grupos",
+  "Emoji": "Emoji",
   "People": "Pessoas",
   "Share": "Compartilhar",
   "Workspace": "Área de trabalho",
@@ -253,6 +256,20 @@
   "Currently editing": "Em edição",
   "Currently viewing": "Em visualização",
   "Viewed {{ timeAgo }}": "Visto {{ timeAgo }}",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
+  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
+  "Please enter a name for the emoji": "Please enter a name for the emoji",
+  "Please select an image file": "Please select an image file",
+  "Emoji created successfully": "Emoji created successfully",
+  "Uploading": "A carregar",
+  "Add emoji": "Add emoji",
+  "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.": "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "Click or drag to replace": "Click or drag to replace",
+  "Drop the image here": "Drop the image here",
+  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "Módulo falhou ao carregar",
   "Loading Failed": "Carregamento falhou",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Parte da aplicação não foi carregada. Isto pode ser porque foi atualizado desde que abriu o separador ou devido a um erro de rede. Tente recarregar.",
@@ -299,6 +316,8 @@
   "Icon Picker": "Selecionador de Ícones",
   "Icons": "Ícones",
   "Emojis": "Emojis",
+  "Custom Emojis": "Custom Emojis",
+  "Custom": "Personalizado",
   "Remove": "Remover",
   "All": "Todos",
   "Frequently Used": "Usado recentemente",
@@ -597,6 +616,9 @@
   "Comment options": "Opções de comentário",
   "Enable viewer insights": "Habilitar estatísticas do utilizador",
   "Enable embeds": "Ativar embeds",
+  "Delete Emoji": "Delete Emoji",
+  "Emoji deleted": "Emoji deleted",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "File",
   "Group members": "Membros do grupo",
   "Edit group": "Editar grupo",
@@ -647,7 +669,6 @@
   "30 days": "30 dias",
   "60 days": "60 Dias",
   "90 days": "90 dias",
-  "Custom": "Personalizado",
   "No expiration": "Sem expiração",
   "The document archive is empty at the moment.": "O arquivo do documento está vazio neste momento.",
   "Drop documents to import": "Arraste documentos para importar",
@@ -848,7 +869,6 @@
   "Inline LaTeX": "LaTeX Embutido",
   "Triggers": "Triggers",
   "Mention users and more": "Mention users and more",
-  "Emoji": "Emoji",
   "Insert block": "Insert block",
   "Sign In": "Iniciar Sessão",
   "Continue with Email": "Continuar com Email",
@@ -989,8 +1009,9 @@
   "Your import is being processed, you can safely leave this page": "Importação está a ser processada, pode sair desta página com segurança",
   "File not supported – please upload a valid ZIP file": "Ficheiro não suportado — envie um ficheiro ZIP válido",
   "Set the default permission level for collections created from the import": "Definir o nível de permissão padrão para coleções criadas a partir da importação",
-  "Uploading": "A carregar",
   "Start import": "Iniciar importação",
+  "Added by": "Added by",
+  "Date added": "Date added",
   "Processing": "A processar",
   "Expired": "Expirado",
   "Completed": "Concluído",
@@ -1060,6 +1081,8 @@
   "Editors": "Editores",
   "All status": "Todos os estados",
   "Active": "Activo",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Esquerda",
   "Right": "Direita",
   "Settings saved": "Configurações guardadas",
