fix: New Swedish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/sv_SE/translation.json
+++ b/shared/i18n/locales/sv_SE/translation.json
@@ -113,6 +113,8 @@
   "You have left the shared document": "Du har lämnat det delade dokumentet",
   "Could not leave document": "Kunde inte lämna dokument",
   "Apply template": "Använd mall",
+  "New emoji": "New emoji",
+  "Upload emoji": "Upload emoji",
   "Disconnect": "Koppla från",
   "Disconnect analytics": "Disconnect analytics",
   "Home": "Hem",
@@ -172,6 +174,7 @@
   "Navigation": "Navigation",
   "Notification": "Avisering",
   "Groups": "Grupper",
+  "Emoji": "Emoji",
   "People": "Människor",
   "Share": "Dela",
   "Workspace": "Arbetsyta",
@@ -253,6 +256,20 @@
   "Currently editing": "Redigerar just nu",
   "Currently viewing": "Visar för närvarande",
   "Viewed {{ timeAgo }}": "Visades för {{ timeAgo }} sedan",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
+  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
+  "Please enter a name for the emoji": "Please enter a name for the emoji",
+  "Please select an image file": "Please select an image file",
+  "Emoji created successfully": "Emoji created successfully",
+  "Uploading": "Laddar upp",
+  "Add emoji": "Add emoji",
+  "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.": "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "Click or drag to replace": "Click or drag to replace",
+  "Drop the image here": "Drop the image here",
+  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "Modulen kunde inte laddas",
   "Loading Failed": "Laddning misslyckades",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Tyvärr, en del av programmet kunde inte laddas. Det kan bero på att den uppdaterades sedan du öppnade fliken eller på grund av en misslyckad nätverksbegäran. Försök att ladda om.",
@@ -299,6 +316,8 @@
   "Icon Picker": "Ikonväljare",
   "Icons": "Ikoner",
   "Emojis": "Emojis",
+  "Custom Emojis": "Custom Emojis",
+  "Custom": "Egendefinerad",
   "Remove": "Ta bort",
   "All": "Alla",
   "Frequently Used": "Ofta använda",
@@ -597,6 +616,9 @@
   "Comment options": "Alternativ för kommentarer",
   "Enable viewer insights": "Aktivera tittarinsikter",
   "Enable embeds": "Aktivera inbäddningar",
+  "Delete Emoji": "Delete Emoji",
+  "Emoji deleted": "Emoji deleted",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "Fil",
   "Group members": "Gruppmedlemmar",
   "Edit group": "Redigera grupp",
@@ -647,7 +669,6 @@
   "30 days": "30 dagar",
   "60 days": "60 dagar",
   "90 days": "90 dagar",
-  "Custom": "Egendefinerad",
   "No expiration": "Ingen utgång",
   "The document archive is empty at the moment.": "Dokumentarkivet är för närvarande tomt.",
   "Drop documents to import": "Släpp dokument att importera",
@@ -848,7 +869,6 @@
   "Inline LaTeX": "Inline LaTeX",
   "Triggers": "Triggers",
   "Mention users and more": "Nämn användare och mer",
-  "Emoji": "Emoji",
   "Insert block": "Infoga block",
   "Sign In": "Logga in",
   "Continue with Email": "Fortsätt med e-post",
@@ -989,8 +1009,9 @@
   "Your import is being processed, you can safely leave this page": "Din import bearbetas, du kan lämna denna sidan",
   "File not supported – please upload a valid ZIP file": "Filen stöds inte – ladda upp en giltig ZIP-fil",
   "Set the default permission level for collections created from the import": "Ange standard behörighetsnivå för samlingar som skapats från importen",
-  "Uploading": "Laddar upp",
   "Start import": "Starta import",
+  "Added by": "Added by",
+  "Date added": "Date added",
   "Processing": "Bearbetar",
   "Expired": "Utgånget",
   "Completed": "Slutförd",
@@ -1060,6 +1081,8 @@
   "Editors": "Redigerare",
   "All status": "Alla statusar",
   "Active": "Aktiv",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Vänster",
   "Right": "Höger",
   "Settings saved": "Inställningarna sparades",
