--- a/shared/i18n/locales/tr_TR/translation.json
+++ b/shared/i18n/locales/tr_TR/translation.json
@@ -113,6 +113,8 @@
   "You have left the shared document": "Paylaşılan belgeden ayrıldınız",
   "Could not leave document": "Belgeden ayrılamadı",
   "Apply template": "Şablonu uygula",
+  "New emoji": "New emoji",
+  "Upload emoji": "Upload emoji",
   "Disconnect": "Bağlantıyı kes",
   "Disconnect analytics": "Analitiği kes",
   "Home": "Anasayfa",
@@ -172,6 +174,7 @@
   "Navigation": "Navigasyon",
   "Notification": "Bildirim",
   "Groups": "Gruplar",
+  "Emoji": "Emoji",
   "People": "Kullanıcılar",
   "Share": "Paylaş",
   "Workspace": "Çalışma Alanı",
@@ -253,6 +256,20 @@
   "Currently editing": "Şu anda düzenliyor",
   "Currently viewing": "Şu anda görüntülüyor",
   "Viewed {{ timeAgo }}": "{{ timeAgo }} tarihinde görüntülendi",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
+  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
+  "Please enter a name for the emoji": "Please enter a name for the emoji",
+  "Please select an image file": "Please select an image file",
+  "Emoji created successfully": "Emoji created successfully",
+  "Uploading": "Yükleniyor",
+  "Add emoji": "Add emoji",
+  "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.": "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "Click or drag to replace": "Click or drag to replace",
+  "Drop the image here": "Drop the image here",
+  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "Modül yüklenemedi",
   "Loading Failed": "Yükleme Başarısız Oldu",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Maalesef uygulamanın bir kısmı yüklenemedi. Bunun nedeni, sekmeyi açtığınızdan beri güncellenmiş olması veya başarısız bir ağ isteği olabilir. Lütfen yeniden yüklemeyi deneyin.",
@@ -299,6 +316,8 @@
   "Icon Picker": "Simge Seçici",
   "Icons": "Simgeler",
   "Emojis": "Emojiler",
+  "Custom Emojis": "Custom Emojis",
+  "Custom": "Özel",
   "Remove": "Kaldır",
   "All": "Tümü",
   "Frequently Used": "Sık Kullanılanlar",
@@ -597,6 +616,9 @@
   "Comment options": "Yorum seçenekleri",
   "Enable viewer insights": "İzleyici analizlerini etkinleştir",
   "Enable embeds": "Yerleştirmeleri etkinleştir",
+  "Delete Emoji": "Delete Emoji",
+  "Emoji deleted": "Emoji deleted",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "Dosya",
   "Group members": "Grup üyeleri",
   "Edit group": "Grubu düzenle",
@@ -647,7 +669,6 @@
   "30 days": "30 gün",
   "60 days": "60 gün",
   "90 days": "90 gün",
-  "Custom": "Özel",
   "No expiration": "Sona erme yok",
   "The document archive is empty at the moment.": "Belge arşivi şu anda boş.",
   "Drop documents to import": "İçe aktarmak için belgeleri buraya bırakın",
@@ -848,7 +869,6 @@
   "Inline LaTeX": "Satır içi LaTeX",
   "Triggers": "Tetikleyiciler",
   "Mention users and more": "Kullanıcılardan ve daha fazlasından bahset",
-  "Emoji": "Emoji",
   "Insert block": "Blok ekle",
   "Sign In": "Giriş Yap",
   "Continue with Email": "E-posta ile devam et",
@@ -989,8 +1009,9 @@
   "Your import is being processed, you can safely leave this page": "İçe aktarımınız işleniyor, bu sayfadan güvenle ayrılabilirsiniz",
   "File not supported – please upload a valid ZIP file": "Dosya desteklenmiyor – lütfen geçerli bir ZIP dosyası yükleyin",
   "Set the default permission level for collections created from the import": "İçe aktarımdan oluşturulan koleksiyonlar için varsayılan izin düzeyini belirleyin",
-  "Uploading": "Yükleniyor",
   "Start import": "İçe aktarmayı başlat",
+  "Added by": "Added by",
+  "Date added": "Date added",
   "Processing": "İşleniyor",
   "Expired": "Süresi doldu",
   "Completed": "Tamamlandı",
@@ -1060,6 +1081,8 @@
   "Editors": "Düzenleyiciler",
   "All status": "Tüm durumlar",
   "Active": "Aktif",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Sol",
   "Right": "Sağ",
   "Settings saved": "Ayarlar kaydedildi",
